--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button onclick = "pickOnce()">1회 뽑기</button>
         <button onclick = "pickTen()">10회 뽑기</button>
         <p id = "cnt_txt">뽑은 횟수: <span id="cnt">0</span> | 사용한 Gcoin: <span id="gcoin_cnt">0</span> (약 <span id = "gcoin_money_cnt">0</span>원)</p>
+        <p id="sungjang_cnt_txt">성장형 아이템 및 도면 당첨 횟수: <span id="sungjang_cnt">0</span></p>
     </div>
 
     <div class="res">
@@ -35,6 +36,7 @@
     <script>
         var cnt = 0;
         var gcoin_cnt = 0;
+        var sungjang_cnt = 0;
 
         const package1 = [
             { name: "[성장] 범퍼 블래스터 - AUG", class: "Legendary", pbt: 0.90000 },
@@ -115,6 +117,8 @@
             $("#res1").text(`[${randomItem.class}] ${randomItem.name}`);
             if(randomItem.class == "Legendary" || randomItem.class == "Ultimate" || randomItem.name == "도면"){
                 alert(`축하합니다!! [${randomItem.class}] ${randomItem.name}`);
+                sungjang_cnt += 1;
+                $("#sungjang_cnt").text(sungjang_cnt);
             }
         }
 
@@ -131,6 +135,8 @@
                 $("#res1").append(`[${randomItem.class}] ${randomItem.name}<br>`);
                 if(randomItem.class == "Legendary" || randomItem.class == "Ultimate" || randomItem.name == "도면"){
                     alert(`축하합니다!! [${randomItem.class}] ${randomItem.name}`);
+                    sungjang_cnt += 1;
+                    $("#sungjang_cnt").text(sungjang_cnt);
                 }
             }
         }
@@ -138,9 +144,11 @@
         function clearcnt(){
             cnt = 0;
             gcoin_cnt = 0;
+            sungjang_cnt = 0;
             $("#cnt").text(cnt);
             $("#gcoin_cnt").text(gcoin_cnt);
             $("#gcoin_money_cnt").text("0");
+            $("#sungjang_cnt").text(sungjang_cnt);
         }
 
     </script>
